@@ -1,3 +1,5 @@
+2006/5/27 -- released version 20060527_trunk
+
 2006/5/26 -- released version 20060526_trunk
 
 2006/5/25 -- released version 20060525_trunk
